# tac08

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  cart.p8  celeste.p8  export_audio.txt  extended_api.md  flash.sh  flash_all.sh  makefile  monitor.sh  package.sh  sdkconfig  switch_dev.sh  switch_rel.sh
components/SDL/: CMakeLists.txt  Kconfig.projbuild  SDL.h  SDL_audio.c  SDL_audio.h  SDL_endian.h  SDL_event.c  SDL_event.h  SDL_input.c  SDL_input.h  SDL_scancode.h  SDL_stdinc.h  SDL_system.c  SDL_system.h  SDL_video.c  SDL_video.h  begin_code.h  close_code.h  component.mk  esp32_compat.h  spi_lcd.c  spi_lcd.h
components/z8lua/: .gitignore  CMakeLists.txt  fix32.h  lctype.cpp  lctype.h  linit.cpp  llex.cpp  llex.h  llimits.h  lmathlib.cpp  lobject.cpp  lparser.cpp  lpico8lib.cpp  lstate.cpp  lstate.h  ltests.cpp  lua.cpp  luaconf.h  lualib.h  lvm.cpp  makefile
main/: CMakeLists.txt  README.md  app_main.cpp  component.mk
src/: CMakeLists.txt  config.h  crypt.cpp  crypt.h  firmware.lua  game.cpp  game.h  gfx_core.cpp  gfx_core.h  hal_audio.cpp  hal_audio.h  hal_core.cpp  hal_core.h  hal_fs.cpp  hal_fs.h  hal_palette.cpp  hal_palette.h  log.cpp  log.h  main.cpp  pico_audio.cpp  pico_audio.h  pico_cart.cpp  pico_cart.h  pico_core.cpp  pico_core.h  pico_data.cpp  pico_data.h  pico_gfx.cpp  pico_gfx.h  pico_memory.cpp  pico_memory.h  pico_script.cpp  pico_script.h  tac08.h  utils.cpp  utils.h
tests/: apitest1.p8  btntest.p8  coroutine.p8  exfont.p8  expal.p8  fstest.p8  geomtest.p8  mousetest.p8  oldfont.p8  paltest.p8  sfxmusictest.p8  sfxtest.p8  soundlooptest.p8  sspr.p8  stattest.p8  time.p8  touchtest.p8  zoomtest.p8
win-tac08/: Resource.h  stdafx.h  win-tac08.rc  win-tac08.sln  win-tac08.vcxproj  win-tac08.vcxproj.filters
